--- a/nixos/home-manager/wayland/modules/waybar/style.css
+++ b/nixos/home-manager/wayland/modules/waybar/style.css
@@ -1,12 +1,11 @@
 * {
-  font-family: "Adwaita Sans";
+  font-family: "Ioveska";
   font-size: 13px;
 }
 
 window#waybar {
   background-color: rgba(36, 40, 59, 1);
   color: #ffffff;
-  border-radius: 0px;
   margin: 0;
   border: none;
 }
