--- a/nixos/home-manager/wayland/modules/waybar/style.css
+++ b/nixos/home-manager/wayland/modules/waybar/style.css
@@ -1,74 +1,220 @@
+/* --- Global Styles --- */
 * {
-  font-family: "Ioveska";
+  font-family: "SF Pro Text", "Inter", "Segoe UI", "NotoSans Nerd Font",
+    sans-serif;
   font-size: 13px;
+  min-height: 0;
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-bottom: 0px;
 }
 
-window#waybar {
-  background-color: rgba(36, 40, 59, 1);
-  color: #ffffff;
-  margin: 0;
+/* --- Waybar Container --- */
+#waybar {
+  background: transparent;
+  color: #c6d0f5;
+  margin: 0px;
+  font-weight: 500;
+}
+
+/* --- Left Modules --- */
+#workspaces,
+#custom-uptime,
+#cpu {
+  background-color: #1a1b26;
+  padding: 0.3rem 0.7rem;
+  margin: 5px 0px;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  min-width: 0;
   border: none;
-  border-radius: 50px;
-  transition-property: background-color;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 #workspaces {
-  margin: 0px 1px;
-  border-radius: 0px;
-  border: none;
+  padding: 2px;
+  margin-left: 7px;
+  margin-right: 5px;
+}
+
+#custom-uptime {
+  margin-right: 5px;
+}
+
+/* Hover effects for left modules */
+#custom-uptime:hover,
+#cpu:hover {
+  background-color: rgb(41, 42, 53);
 }
 
 #workspaces button {
-  color: #ffffff;
-  border-radius: 0px;
-  padding: 0 5px;
-  min-width: 20px;
-  min-height: 20px;
+  color: #babbf1;
+  border-radius: 5px;
+  padding: 0.3rem 0.6rem;
+  background: transparent;
+  transition: all 0.2s ease-in-out;
+  border: none;
+  outline: none;
 }
 
 #workspaces button.focused {
-  background-color: #ffffff;
-  color: #000000;
-  border-radius: 0px;
+  color: #99d1db;
+  background-color: rgba(153, 209, 219, 0.1);
+  box-shadow: inset 0 0 0 1px rgba(153, 209, 219, 0.2);
 }
 
 #workspaces button.urgent {
-  background-color: #000000;
-  border-radius: 0px;
+  color: #e78284;
+  background-color: rgba(231, 130, 132, 0.1);
+  box-shadow: inset 0 0 0 1px rgba(231, 130, 132, 0.2);
 }
 
-#clock,
+#workspaces button:hover {
+  background: rgb(41, 42, 53);
+  color: #c6d0f5;
+}
+
+/* --- Center Module --- */
+#clock {
+  background-color: #1a1b26;
+  padding: 0.3rem 0.7rem;
+  margin: 5px 0px;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(153, 209, 219, 0.2);
+  min-width: 0;
+  border: none;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+#clock:hover {
+  background-color: rgba(153, 209, 219, 0.1);
+}
+
+/* Pomodoro Module */
+#custom-pomodoro {
+  background-color: #1a1b26;
+  padding: 0.3rem 0.7rem;
+  margin: 5px 0px;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  min-width: 0;
+  border: none;
+  outline: none;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+    outline 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  color: #babbf1;
+  font-weight: 600;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+#custom-pomodoro:hover {
+  background-color: rgb(41, 42, 53);
+  color: #c6d0f5;
+  outline: 1px solid rgba(255, 255, 255, 0.1);
+  outline-offset: -1px;
+}
+
+#custom-pomodoro.work,
+#custom-pomodoro.break {
+  color: #99d1db;
+  background-color: rgba(153, 209, 219, 0.1);
+  box-shadow: inset 0 0 0 1px rgba(153, 209, 219, 0.2);
+  outline: none;
+}
+
+/* --- Right Modules --- */
 #bluetooth,
-#tray,
-#battery,
+#pulseaudio,
+#backlight,
 #network,
+#custom-lock,
+#battery {
+  background-color: #1a1b26;
+  padding: 0.3rem 0.7rem;
+  margin: 5px 0px;
+  border-radius: 0;
+  box-shadow: none;
+  min-width: 0;
+  border: none;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+#bluetooth:hover,
+#pulseaudio:hover,
+#backlight:hover,
+#network:hover,
+#custom-lock:hover,
+#battery:hover {
+  background-color: rgb(41, 42, 53);
+}
+
+#bluetooth {
+  margin-left: 0px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+
+#battery {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  margin-right: 7px;
+}
+
+/* --- Colors --- */
+#custom-uptime {
+  color: #babbf1;
+}
+#cpu {
+  color: #c6d0f5;
+}
+#clock {
+  color: #99d1db;
+  font-weight: 500;
+}
 #pulseaudio {
-  padding: 0 10px;
-  color: #ffffff;
+  color: #c6d0f5;
 }
-
-#battery.charging {
-  color: #00bb13;
+#backlight {
+  color: #c6d0f5;
 }
-
-#battery.warning:not(.charging) {
-  color: #ffb300;
+#network {
+  color: #c6d0f5;
 }
-
-#battery.critical:not(.charging) {
-  color: #d11500;
-}
-
 #network.disconnected {
-  color: #c10000;
+  color: #e78284;
+}
+#custom-lock {
+  color: #babbf1;
+}
+#bluetooth {
+  color: #888888;
+  font-size: 16px;
+}
+#bluetooth.on {
+  color: #2196f3;
+}
+#bluetooth.connected {
+  color: #99d1db;
+}
+#battery {
+  color: #99d1db;
+}
+#battery.charging {
+  color: #a6d189;
+}
+#battery.warning:not(.charging) {
+  color: #e78284;
 }
 
-#pulseaudio.muted {
-  color: #a8a8a8;
-}
-
-#custom-spotify {
- color: #A6E3A1;
- padding-left: 5px;
- padding-right: 5px;
+/* --- Tooltip Styles --- */
+tooltip {
+  background-color: #1a1b26;
+  color: #dddddd;
+  padding: 5px 12px;
+  margin: 5px 0px;
+  border-radius: 6px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  font-size: 12px;
 }
