--- a/nixos/home-manager/wayland/modules/waybar/style.css
+++ b/nixos/home-manager/wayland/modules/waybar/style.css
@@ -12,7 +12,7 @@
 /* --- Waybar Container --- */
 #waybar {
   background: transparent;
-  color: #c6d0f5;
+  color: #99d1db;
   margin: 0px;
   font-weight: 500;
 }
@@ -71,7 +71,7 @@
 
 #workspaces button:hover {
   background: rgb(41, 42, 53);
-  color: #c6d0f5;
+  color: #99d1db;
 }
 
 /* --- Center Module --- */
@@ -110,7 +110,7 @@
 
 #custom-pomodoro:hover {
   background-color: rgb(41, 42, 53);
-  color: #c6d0f5;
+  color: #99d1db;
   outline: 1px solid rgba(255, 255, 255, 0.1);
   outline-offset: -1px;
 }
@@ -129,6 +129,7 @@
 #backlight,
 #network,
 #memory,
+#tray,
 #battery,
 #custom-lock{
   background-color: #1a1b26;
@@ -161,20 +162,20 @@
   color: #babbf1;
 }
 #cpu {
-  color: #c6d0f5;
+  color: #99d1db;
 }
 #clock {
   color: #99d1db;
   font-weight: 500;
 }
 #pulseaudio {
-  color: #c6d0f5;
+  color: #99d1db;
 }
 #backlight {
-  color: #c6d0f5;
+  color: #99d1db;
 }
 #network {
-  color: #c6d0f5;
+  color: #99d1db;
 }
 #network.disconnected {
   color: #e78284;
